feat: 增加后台任务过期租约恢复接口
